--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "homepage": "https://goitacademy.github.io/parcel-project-template",
   "scripts": {
-    "start": "parcel src/*.html",
-    "build": "parcel build src/*.html --public-url /goit-js-hw-08/"
+    "start": "parcel src/*.html --no-cache",
+    "build": "parcel build src/*.html --public-url /goit-js-hw-08/ --no-cache"
   },
   "repository": {
     "type": "git",
